# HexClamp

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CI-FIX-SUMMARY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  ROADMAP_PLAN.md  SECURITY_FIX_SUMMARY.md  SPEC.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  task_codex.md  test_git_config_fix.py
agents/: __init__.py  condenser.py  delivery.py  executors.py  executors.py.bak  loop.py  models.py  observer.py  planner.py  planner.py.backup  store.py  validate.py  verifier.py
architecture/: index.html
config/: agents.yaml  loops.yaml  policies.yaml
configuration/: index.html
docs/: BRANCH_PROTECTION.md  MESSAGING_INTEGRATION_PLAN.md  anthropic-harness-reference.md  architecture.md  configuration.md  environment.md  executors.md  index.md  installation.md  loop.md  quickstart.md  schemas.md  scripts.md
environment/: index.html
examples/: __init__.py  cli_agent.py
executors/: index.html
memory/: decisions.md  incidents.md  metrics-log.md  patterns.md  preferences.md
prompts/: condenser.md  observer.md  planner.md  verifier.md
schemas/: action.schema.json  event-queue.schema.json  event.schema.json  index.html  loop.schema.json  open-loops.schema.json  result.schema.json  state.schema.json
scripts/: analyze_verifier.py  approve_message.py  auto_edit.py  bootstrap_runtime.py  browser_executor.py  browser_runner.py  browser_task.py  edit_toolkit.py  fix_quote_escaping.py  index.html  loop_intelligence.py  metrics.py  (+8 more)
(+58 files in other folders)
